# CDC_Competition

./: CMakeLists.txt  README.md  package.xml
include/: a_star.h  inspector.h  inspector1.h  k_means_cluster.h  msg_pub.h  photo_taker.h
launch/example/: group_ptcloud_2_octomap_w_tf.launch
msg/: GridMap.msg  GridNode.msg
src/: a_star_test.cpp  arrange_test.cpp  controller.cpp  get_occupancy.cpp  get_points_in_faces.ipynb  inspector copy.cpp  inspector.cpp  k_means_test.cpp  photo_taker.cpp  polynomial_traj.cpp  ptcloud_2_octomap.cpp  subscriber.cpp
